--- a/register.html
+++ b/register.html
@@ -31,8 +31,8 @@
     }
 
     #dou5 {
-      min-height: 100vh;
-      min-width: 900px;
+      height: 822px;
+      width: 700px;
     }
 
     .doudistance {
@@ -47,32 +47,32 @@
 
     <div class="row">
 
-      <div class="col" id="dourl">
-        <img id="dou5" src="images/dou5.jpeg" style="width: 785px; height: 980px; background: rgba(0, 0, 0, 0); opacity: 1;" alt="">
+      <div class="col-6" id="dourl">
+        <img id="dou5" src="images/dou5.jpeg" style="background: rgba(0, 0, 0, 0); opacity: 1;" alt="">
       </div>
 
-      <div class="col">
+      <div class="col-6">
         <div style="width: 200px">
-          <p class="text-center" style="margin-top: 210px; margin-bottom: 30px; margin-left: 50%; width: 759px;height: 65px;font-size: 48px;font-family: Helvetica-Bold;line-height: 48px;color: #AB814A;opacity: 1;">Join Hidden Scenery</p>
+          <p class="text-center" style="margin-top: 100px; margin-bottom: 30px; margin-left: 50%; width: 759px;height: 65px;font-size: 48px;font-family: Helvetica-Bold;line-height: 48px;color: #AB814A;opacity: 1;">Join Hidden Scenery</p>
           <form action="" class="doudistance">
             <div class="form-group">
               <label for="username" cclass="col-sm col-form-label" style="margin-top: 70px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1; "> User name:</label>
-              <input type="username" name="username" id="username" class="form-control" style="margin-bottom: 65px; width: 270px; height: 36px; border: 1px solid #979797;opacity: 1;">
+              <input type="username" name="username" id="username" class="form-control" style="margin-bottom: 40px; width: 270px; height: 36px; border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group">
-              <label for="email" cclass="col-sm col-form-label" style="margin-top:30px; margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
-              <input type="email" name="email" id="email" class="form-control" style="margin-bottom: 65px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
+              <label for="email" cclass="col-sm col-form-label" style="margin-top:10px; margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
+              <input type="email" name="email" id="email" class="form-control" style="margin-bottom: 40px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group ">
-              <label for="password" cclass="col-sm col-form-label" style="margin-top:30px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
-              <input type="password" name="password" id="password" class="form-control" style="margin-bottom: 65px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
+              <label for="password" cclass="col-sm col-form-label" style="margin-top:10px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
+              <input type="password" name="password" id="password" class="form-control" style="margin-bottom: 90px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group text-center">
               <button type="button" name="Login" id="register" class="btn-button"
-                style="margin-top: 60px; margin-left: 50px; width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;font-size: 18px;line-height: 24px;color: #FFFFFF;opacity: 1;">Register</button>
+                style="padding:0;margin-top: 70px; margin-left: 50px; width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;font-size: 18px;line-height: 24px;color: #FFFFFF;opacity: 1;">Register</button>
             </div>
           </form>
         </div>
