--- a/Landing_page.html
+++ b/Landing_page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Landing_page</title>
+  <title>Hidden Scenery</title>
   <link rel="stylesheet" type="text/css" href="navigation.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
