--- a/Detail_page.html
+++ b/Detail_page.html
@@ -36,7 +36,7 @@
         </a>
       </div>
       <div class="nav2">
-        <a href="List.html">
+        <a href="Under_Construction.html">
           <p class="text_nav">Explore</p>
         </a>
       </div>
