--- a/Landing_page.html
+++ b/Landing_page.html
@@ -11,6 +11,7 @@
   </script>
   <script type="text/javascript" src="Landing_page.js">
   </script>
+
   <style type="text/css">
     .banner {
       position: relative;
@@ -121,7 +122,7 @@
       </a>
     </div>
     <div class="nav2">
-      <a href="List.html">
+      <a href="Under_Construction.html">
         <p class="text_nav">Explore</p>
       </a>
     </div>
