--- a/register.html
+++ b/register.html
@@ -56,8 +56,8 @@
           <p class="text-center" style="margin-top: 100px; margin-bottom: 30px; margin-left: 50%; width: 759px;height: 65px;font-size: 48px;font-family: Helvetica-Bold;line-height: 48px;color: #AB814A;opacity: 1;">Join Hidden Scenery</p>
           <form action="" class="doudistance">
             <div class="form-group">
-              <label for="username" cclass="col-sm col-form-label" style="margin-top: 70px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1; "> User name:</label>
-              <input type="username" name="username" id="username" class="form-control" style="margin-bottom: 40px; width: 270px; height: 36px; border: 1px solid #979797;opacity: 1;">
+              <label for="username" cclass="col-sm col-form-label" style="margin-top: 70px;padding:6.4px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1; "> User name:</label>
+              <input type="username" name="username" id="username" class="form-control" style="margin-bottom: 40px; padding:6.4px;width: 270px; height: 36px; border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group">
