--- a/Landing_page.html
+++ b/Landing_page.html
@@ -102,7 +102,9 @@
 <body>
   <div class="banner">
     <img class="banner_picture" src="images/banner.png" width="100%">
-    <p class="banner_text">Week 3:<br>Helsinki Cathedral</p><br>
+    <a href="Detail_page.html">
+      <p class="banner_text">Week 3:<br>Helsinki Cathedral</p><br>
+    </a>
     <div class="float" id="Float">
       <div style="width:300px; padding-left:12px;">
         <text id="Intro"> The church stands out from the neat buildings by the lake. The arched roof is dark green and pointed.</text>
