--- a/login.html
+++ b/login.html
@@ -59,9 +59,8 @@
         <div class="container">
           <div class="row" style="margin: 0px">
             <p style="margin: 0px; width: 199px;height: 26px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;margin-left: 125px">Don't have an account?</p>
-            <a href="register.html">
-              <p style="margin: 0px; width: 80px;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
-            </a>
+            <p style="margin: 0px; width: 80px;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
+            <!-- <a href="register.html"></a> -->
           </div>
         </div>
         <!-- <p style="width: 193px;margin-left: 35%;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">Forget the password?</p> -->
