--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.css">
   <script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -16,59 +15,90 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <title>Login</title>
   <style type="text/css">
+    .container {
+      margin: 0;
+      padding: 0
+    }
 
+    .ui-input-text {
+      border-style: none;
+    }
+
+
+    .form {
+      border-style: none;
+      outline: 0;
+    }
+
+    #dou5 {
+      height: 822px;
+      width: 700px;
+    }
+
+    .doudistance {
+      margin-left: 350px;
+    }
   </style>
+
 </head>
 
 <body>
-  <!-- 引用登陆弹窗的语句 -->
-  <a href="#loginwindow" data-rel="popup" class="ui-btn ui-btn-inline ui-corner-all" data-position-to="window">Login</a>
+  <div class="container">
 
-  <div data-role="popup" id="loginwindow" class="ui-content"
-  style="width: 550px;height: 450px;background: #FFFFFF; opacity: 1;">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">关闭</a>
-    <div class="container">
-      <p class="text-center"
-      style="margin-left: 39%;width: 132px;height: 52px;font-size: 36px;font-family: Helvetica-Bold;line-height: 48px;color: #A67C43;opacity: 1;">Login</p>
-      <form action="">
-        <div class="form-group">
-          <label for="email" cclass="col-sm-2 col-form-label"> Email:</label>
-          <input type="email" name="email" id="email" class="col-sm-5 form-control">
-        </div>
+    <div class="row">
 
-        <div class="form-group">
-          <label for="password" cclass="col-sm-2 col-form-label"> Password:</label>
-          <input type="password" name="password" id="password" class="col-sm-5 form-control">
-        </div>
+      <div class="col-6" >
+        <img id="dou5" src="images/dou5.jpeg" style="background: rgba(0, 0, 0, 0); opacity: 1;" alt="">
+      </div>
 
-        <div class="form-group text-center">
-          <div class="form-check" style="padding: 0px;margin-top: 10px;
-          margin-left: 0px; width:225px">
-            <input type="checkbox" name="checkbox" id="check" value="" class="form-check-input"
-            style="width: 100px;height: 6px;background: #AC8149;opacity: 1;border-radius: 4px;">
-            <label for="check" class="form-check-label"
-            style="font-size: 16px;font-family: HelveticaNeue;line-height: 18px;opacity: 1;"> Keep me logged in</label>
+      <div class="col-6" >
+
+        <p class="text-center" style="margin-left: 72%;margin-top: 10%;width: 132px;height: 52px;font-size: 36px;font-family: Helvetica-Bold;line-height: 48px;color: #A67C43;opacity: 1;">Login</p>
+
+        <form action="" >
+
+          <div class="form-group">
+            <label for="email"  style="margin-left: 30%;margin-bottom: 17px;width: 270px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
+            <input type="email" name="email" id="email" class="form-control" style="margin-left: 30%;margin-bottom: 90px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
           </div>
-        </div>
 
-        <div class="form-group ">
-          <!-- 改悬停时的特效 -->
-          <button type="button" name="Login" id="login" class="btn-button text-center"
-          style="margin-left: 35%;margin-top: 60px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 24px;color: #FFFFFF;opacity: 1;width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;padding-top: 3px;">Login</button>
-        </div>
-        <div class="container">
-          <div class="row" style="margin: 0px">
-            <p style="margin: 0px; width: 199px;height: 26px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;margin-left: 125px">Don't have an account?</p>
-            <p style="margin: 0px; width: 80px;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
-            <!-- <a href="register.html"></a> -->
+          <div >
+            <label for="password"  style="margin-left: 30%;margin-bottom: 17px;width: 270px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
+            <input type="password" name="password" id="password" class="form-control" style="margin-left: 30%;margin-bottom: 90px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
           </div>
-        </div>
-        <!-- <p style="width: 193px;margin-left: 35%;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">Forget the password?</p> -->
-      </form>
+
+          <div class="form-group ">
+                    <div class="form-check" style="margin-left: 30%;padding: 0px;margin-top: 10px;
+                    margin-left: 0px; width:225px">
+                      <input type="checkbox" name="checkbox" id="check" value="" class="form-check-input"
+                      style="margin-left: 30%;width: 100px;height: 6px;background: #AC8149;opacity: 1;border-radius: 4px;">
+                      <label for="check" class="form-check-label"
+                      style="margin-left: 60%;font-size: 16px;font-family: HelveticaNeue;line-height: 18px;opacity: 1;"> Keep me logged in</label>
+                    </div>
+                  </div>
+
+
+          <div class="form-group ">
+            <!-- 改悬停时的特效 -->
+            <button type="button" name="Login" id="login" class="btn-button text-center"
+              style="margin-left: 25%;margin-top: 60px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 24px;color: #FFFFFF;opacity: 1;width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;padding: 0px;">Login</button>
+          </div>
+          <div class="container">
+            <div class="row" style="margin: 0px">
+              <div>
+                <p style="margin: 0px; width: 200px;height: 26px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;">Don't have an account?</p>
+              </div>
+              <div>
+                <p style="margin: 0px; width: 100px;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
+              </div>
+              <!-- <a href="register.html"></a> -->
+            </div>
+          </div>
+        </form>
+
+      </div>
     </div>
-
   </div>
-
 </body>
 
 </html>
