--- a/login.html
+++ b/login.html
@@ -24,7 +24,6 @@
       border-style: none;
     }
 
-
     .form {
       border-style: none;
       outline: 0;
@@ -39,66 +38,55 @@
       margin-left: 350px;
     }
   </style>
-
 </head>
 
 <body>
+
   <div class="container">
-
     <div class="row">
-
-      <div class="col-6" >
+      <div class="col-6" id="dourl">
         <img id="dou5" src="images/dou5.jpeg" style="background: rgba(0, 0, 0, 0); opacity: 1;" alt="">
       </div>
 
-      <div class="col-6" >
-
-        <p class="text-center" style="margin-left: 72%;margin-top: 10%;width: 132px;height: 52px;font-size: 36px;font-family: Helvetica-Bold;line-height: 48px;color: #A67C43;opacity: 1;">Login</p>
-
-        <form action="" >
-
-          <div class="form-group">
-            <label for="email"  style="margin-left: 30%;margin-bottom: 17px;width: 270px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
-            <input type="email" name="email" id="email" class="form-control" style="margin-left: 30%;margin-bottom: 90px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
-          </div>
-
-          <div >
-            <label for="password"  style="margin-left: 30%;margin-bottom: 17px;width: 270px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
-            <input type="password" name="password" id="password" class="form-control" style="margin-left: 30%;margin-bottom: 90px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
-          </div>
-
-          <div class="form-group ">
-                    <div class="form-check" style="margin-left: 30%;padding: 0px;margin-top: 10px;
-                    margin-left: 0px; width:225px">
-                      <input type="checkbox" name="checkbox" id="check" value="" class="form-check-input"
-                      style="margin-left: 30%;width: 100px;height: 6px;background: #AC8149;opacity: 1;border-radius: 4px;">
-                      <label for="check" class="form-check-label"
-                      style="margin-left: 60%;font-size: 16px;font-family: HelveticaNeue;line-height: 18px;opacity: 1;"> Keep me logged in</label>
-                    </div>
-                  </div>
-
-
-          <div class="form-group ">
-            <!-- 改悬停时的特效 -->
-            <button type="button" name="Login" id="login" class="btn-button text-center"
-              style="margin-left: 25%;margin-top: 60px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 24px;color: #FFFFFF;opacity: 1;width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;padding: 0px;">Login</button>
-          </div>
-          <div class="container">
-            <div class="row" style="margin: 0px">
-              <div>
-                <p style="margin: 0px; width: 200px;height: 26px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;">Don't have an account?</p>
-              </div>
-              <div>
-                <p style="margin: 0px; width: 100px;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
-              </div>
-              <!-- <a href="register.html"></a> -->
+      <div class="col-6">
+        <div style="width: 200px">
+          <p class="text-center" style="margin-top: 100px; margin-bottom: 30px; margin-left: 50%; width: 759px;height: 65px;font-size: 48px;font-family: Helvetica-Bold;line-height: 48px;color: #AB814A;opacity: 1;">Login</p>
+          <form action="" class="doudistance">
+            <div class="form-group">
+              <label for="email" cclass="col-sm col-form-label" style="margin-top:60px; margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
+              <input type="email" name="email" id="email" class="form-control" style="margin-bottom: 40px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
             </div>
-          </div>
-        </form>
+
+            <div class="form-group ">
+              <label for="password" cclass="col-sm col-form-label" style="margin-top:10px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
+              <input type="password" name="password" id="password" class="form-control" style="margin-bottom: 90px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
+            </div>
+
+            <div class="form-group text-center">
+              <div class="form-check" style="padding: 0px;margin-top: 10px;
+          margin-left: 20px; width:225px">
+                <input type="checkbox" name="checkbox" id="check" value="" class="form-check-input" style="width: 100px;height: 6px;background: #AC8149;opacity: 1;border-radius: 4px;">
+                <label for="check" class="form-check-label" style="font-size: 16px;font-family: HelveticaNeue;line-height: 18px;opacity: 1;"> Keep me logged in</label>
+              </div>
+            </div>
+
+            <div class="form-group ">
+              <button type="button" name="Login" id="login" class="btn-button text-center"
+                style="margin-left: 50px;margin-top: 20px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 24px;color: #FFFFFF;opacity: 1;width: 174px;height: 36px;background: #AB814A;border: 1px solid #AB814A;opacity: 1;border-radius: 100px;padding-top: 3px;">Login</button>
+            </div>
+            <div class="container" style="width:700px">
+              <div class="row">
+                <p style=" margin-left:10px;margin-right:10px;float:left; height: 10px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;">Don't have an account? </p>
+                <p style=" float:right; width:80px; height: 10px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
+                <!-- <a href="register.html"></a> -->
+              </div>
+            </div>
+            <!-- <p style="width: 193px;margin-left: 35%;height: 27px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">Forget the password?</p> -->
+          </form>
+        </div>
 
       </div>
-    </div>
-  </div>
+
 </body>
 
 </html>
