--- a/login.html
+++ b/login.html
@@ -54,16 +54,16 @@
           <form action="" class="doudistance">
             <div class="form-group">
               <label for="email" cclass="col-sm col-form-label" style="margin-top:60px; margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Email:</label>
-              <input type="email" name="email" id="email" class="form-control" style="margin-bottom: 40px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
+              <input type="email" name="email" id="email" class="form-control" style="margin-bottom: 30px; width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group ">
               <label for="password" cclass="col-sm col-form-label" style="margin-top:10px;margin-bottom: 17px;width: 174px;height: 19px;font-size: 16px;font-family: HelveticaNeue-Bold;line-height: 19px;color: #161513;opacity: 1;"> Password:</label>
-              <input type="password" name="password" id="password" class="form-control" style="margin-bottom: 90px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
+              <input type="password" name="password" id="password" class="form-control" style="margin-bottom: 60px;width: 270px;height: 36px;border: 1px solid #979797;opacity: 1;">
             </div>
 
             <div class="form-group text-center">
-              <div class="form-check" style="padding: 0px;margin-top: 10px;
+              <div class="form-check" style="padding: 0px;margin-top: 20px;
           margin-left: 20px; width:225px">
                 <input type="checkbox" name="checkbox" id="check" value="" class="form-check-input" style="width: 100px;height: 6px;background: #AC8149;opacity: 1;border-radius: 4px;">
                 <label for="check" class="form-check-label" style="font-size: 16px;font-family: HelveticaNeue;line-height: 18px;opacity: 1;"> Keep me logged in</label>
@@ -76,8 +76,9 @@
             </div>
             <div class="container" style="width:700px">
               <div class="row">
-                <p style=" margin-left:10px;margin-right:10px;float:left; height: 10px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;">Don't have an account? </p>
-                <p style=" float:right; width:80px; height: 10px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
+                <p style=" margin-top: 60px;margin-left:10px;margin-right:10px;float:left; height: 10px;font-size: 18px;font-family: HelveticaNeue;line-height: 22px;color: #161513;opacity: 1;">Don't have an account? </p>
+                <a href="register.html"></a>
+                <p style=" margin-top: 60px;float:right; width:80px; height: 10px;font-size: 18px;font-family: HelveticaNeue-Bold;line-height: 23px;color: #9060EB;opacity: 1;">sign up!</p>
                 <!-- <a href="register.html"></a> -->
               </div>
             </div>
