--- a/Contribute.html
+++ b/Contribute.html
@@ -445,7 +445,7 @@
       </table>
     </div>
     <div class="login">
-      <a href="Login.html">
+      <a href="login.html">
         <p class="text_nav">Login</p>
       </a>
     </div>
