--- a/Detail_page.html
+++ b/Detail_page.html
@@ -60,7 +60,7 @@
   <div id="CluePanel">
     <h class="title">Week 3:</h>
     <br>
-    <h class="title">Helsinki Cathedral</h>
+    <h style="top:44px" class="title">Helsinki Cathedral</h>
     <br>
     <text id="Details">The church stands out from the neat buildings by the lake. The arched roof is dark green and pointed.</text>
 
