--- a/Landing_page.html
+++ b/Landing_page.html
@@ -109,8 +109,8 @@
       <div style="width:300px; padding-left:12px;">
         <text id="Intro"> The church stands out from the neat buildings by the lake. The arched roof is dark green and pointed.</text>
       </div>
-      <img src="images/location.png" alt="The icon for Clue">
-      <b>Unioninkatu 29, 00170 Helsinki</b>
+      <img style="padding-left:16px;padding-top:6px;" src="images/location.png" alt="The icon for Clue">
+      <b style="padding-left:6px;">Unioninkatu 29, 00170 Helsinki</b>
     </div>
   </div>
 
