--- a/Contribute.html
+++ b/Contribute.html
@@ -449,7 +449,7 @@
         <p class="text_nav">Login</p>
       </a>
     </div>
-    <<a href="register.html"><button class="button_register" type="button" name="Join free">Join free</button></a>
+   <a href="register.html"> <button class="button_register" id="button_register" type="button" name="Join free">Join free</button></a>
   </div>
 
 </body>
