--- a/Detail_page.html
+++ b/Detail_page.html
@@ -26,34 +26,34 @@
 
 <body>
 
-    <div class="navigation">
-      <a href="Landing_page.html"><img class="logo" src="images/logo.png"></a>
-      <p class="title">Hidden Scenery</p>
-      <p class="slogan">The ordinary view can be extraordinary</p>
-      <div class="nav1">
-        <a href="Detail_page.html">
-          <p class="text_nav">Weekly-Task</p>
-        </a>
-      </div>
-      <div class="nav2">
-        <a href="Under_Construction.html">
-          <p class="text_nav">Explore</p>
-        </a>
-      </div>
-      <div class="line">
-        <table style="height:32px;border-color:#E3D5CA;border-left-style:solid;border-width:2px">
-          <tr>
-            <td valign="top"></td>
-          </tr>
-        </table>
-      </div>
-      <div class="login">
-        <a href="Login.html">
-          <p class="text_nav">Login</p>
-        </a>
-      </div>
-      <a href="register.html"> <button class="button_register" id="button_register" type="button" name="Join free">Join free</button></a>
+  <div class="navigation">
+    <a href="Landing_page.html"><img class="logo" src="images/logo.png"></a>
+    <p class="title">Hidden Scenery</p>
+    <p class="slogan">The ordinary view can be extraordinary</p>
+    <div class="nav1">
+      <a href="Detail_page.html">
+        <p class="text_nav">Weekly-Task</p>
+      </a>
     </div>
+    <div class="nav2">
+      <a href="Under_Construction.html">
+        <p class="text_nav">Explore</p>
+      </a>
+    </div>
+    <div class="line">
+      <table style="height:32px;border-color:#E3D5CA;border-left-style:solid;border-width:2px">
+        <tr>
+          <td valign="top"></td>
+        </tr>
+      </table>
+    </div>
+    <div class="login">
+      <a href="login.html">
+        <p class="text_nav">Login</p>
+      </a>
+    </div>
+   <a href="register.html"> <button class="button_register" id="button_register" type="button" name="Join free">Join free</button></a>
+  </div>
 
   <img id="ShowPic" src="images/cathedral.png"> </img>
 
